chore: move cache and update packages

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"extends": "@repo/tsconfig/base.json",
 	"compilerOptions": {
-		"lib": ["es2022", "dom", "dom.iterable"],
+		"lib": ["dom", "dom.iterable", "ES2022"],
 		"jsx": "preserve",
 		"baseUrl": ".",
 		"paths": {
