--- a/tooling/prettier/package.json
+++ b/tooling/prettier/package.json
@@ -7,7 +7,7 @@
 		".": "./index.json"
 	},
 	"scripts": {
-		"clean": "rm -rf .turbo node_modules",
+		"clean": "rm -rf .turbo .cache node_modules",
 		"format": "prettier --write . --ignore-path ../../.gitignore"
 	},
 	"dependencies": {
