--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,7 @@
 		"build": "pnpm with-env tsr generate && tsc -b && vite build",
 		"lint": "eslint .",
 		"preview": "pnpm with-env vite preview",
-		"clean": "rm -rf dist node_modules .turbo",
+		"clean": "rm -rf dist node_modules .turbo .cache",
 		"typecheck": "tsc --noEmit",
 		"with-env": "dotenv -e ../../.env --",
 		"format": "prettier --write . --ignore-path ../../.gitignore"
@@ -17,8 +17,8 @@
 		"@repo/api-client": "workspace:*",
 		"@repo/env": "workspace:*",
 		"@repo/ui": "workspace:*",
-		"@tanstack/react-query": "^5.55.2",
-		"@tanstack/react-router": "^1.56.5",
+		"@tanstack/react-query": "^5.55.4",
+		"@tanstack/react-router": "^1.57.9",
 		"@trpc/client": "catalog:",
 		"@trpc/react-query": "catalog:",
 		"react": "catalog:react18",
@@ -30,9 +30,9 @@
 		"@repo/prettier-config": "workspace:*",
 		"@repo/tailwind-config": "workspace:*",
 		"@repo/tsconfig": "workspace:*",
-		"@tanstack/router-cli": "^1.56.4",
-		"@tanstack/router-devtools": "^1.56.5",
-		"@tanstack/router-plugin": "^1.56.4",
+		"@tanstack/router-cli": "^1.57.9",
+		"@tanstack/router-devtools": "^1.57.9",
+		"@tanstack/router-plugin": "^1.57.9",
 		"@types/react": "catalog:react18",
 		"@types/react-dom": "catalog:react18",
 		"@vitejs/plugin-react": "^4.3.1",
@@ -46,7 +46,7 @@
 		"prettier": "catalog:",
 		"tailwindcss": "^3.4.10",
 		"typescript": "catalog:",
-		"typescript-eslint": "^8.4.0",
+		"typescript-eslint": "^8.5.0",
 		"vite": "^5.4.3",
 		"vite-tsconfig-paths": "^5.0.1"
 	},
