--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -11,7 +11,7 @@
 	},
 	"license": "MIT",
 	"scripts": {
-		"clean": "rm -rf .turbo dist node_modules",
+		"clean": "rm -rf .turbo .cache dist node_modules",
 		"typecheck": "tsc --noEmit --emitDeclarationOnly false",
 		"format": "prettier --write . --ignore-path ../../.gitignore"
 	},
