--- a/packages/api-server/tsconfig.json
+++ b/packages/api-server/tsconfig.json
@@ -1,9 +1,7 @@
 {
 	"extends": "@repo/tsconfig/internal-package.json",
 	"compilerOptions": {
-		"baseUrl": ".",
-		"lib": ["dom", "dom.iterable", "ES2022"],
-		"tsBuildInfoFile": "node_modules/.cache/tsbuildinfo.json"
+		"lib": ["dom", "dom.iterable", "ES2022"]
 	},
 	"include": ["src"],
 	"exclude": ["node_modules"]
