--- a/tooling/typescript/package.json
+++ b/tooling/typescript/package.json
@@ -7,7 +7,7 @@
 		"*.d.ts"
 	],
 	"scripts": {
-		"clean": "rm -rf .turbo node_modules"
+		"clean": "rm -rf .turbo .cache node_modules"
 	},
 	"devDependencies": {
 		"@total-typescript/ts-reset": "^0.6.1"
