--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,7 @@
 	"tasks": {
 		"build": {
 			"dependsOn": ["^build"],
-			"outputs": ["node_modules/.cache/tsbuildinfo.json", "dist/**"]
+			"outputs": [".cache/tsbuildinfo.json", "dist/**"]
 		},
 		"start": {
 			"cache": false
@@ -14,7 +14,7 @@
 			"persistent": false
 		},
 		"format": {
-			"outputs": ["node_modules/.cache/.prettiercache"],
+			"outputs": [".cache/.prettiercache"],
 			"outputLogs": "new-only"
 		},
 		"clean": {
