refactor: modify packages and updates

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -12,7 +12,7 @@
 	"license": "MIT",
 	"scripts": {
 		"clean": "rm -rf .turbo .cache dist node_modules",
-		"typecheck": "tsc --noEmit --emitDeclarationOnly false",
+		"typecheck": "tsc --noEmit",
 		"format": "prettier --write . --ignore-path ../../.gitignore"
 	},
 	"dependencies": {
