--- a/packages/env/tsconfig.json
+++ b/packages/env/tsconfig.json
@@ -1,5 +1,5 @@
 {
-	"extends": "@repo/tsconfig/base.json",
+	"extends": "@repo/tsconfig/internal-package.json",
 	"include": ["src"],
 	"exclude": ["node_modules"]
 }
