--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,11 +5,11 @@
 	"type": "module",
 	"exports": {
 		".": {
-			"types": "./dist/src/index.d.ts",
+			"types": "./dist/index.d.ts",
 			"default": "./src/utils/index.ts"
 		},
 		"./*": {
-			"types": "./dist/src/*.d.ts",
+			"types": "./dist/*.d.ts",
 			"default": "./src/*.tsx"
 		}
 	},
@@ -18,7 +18,7 @@
 		"build": "tsc",
 		"dev": "tsc",
 		"clean": "rm -rf .turbo .cache dist node_modules",
-		"typecheck": "tsc --noEmit --emitDeclarationOnly false",
+		"typecheck": "tsc --noEmit",
 		"format": "prettier --write . --ignore-path ../../.gitignore",
 		"ui-add": "pnpm dlx shadcn@latest add && prettier src --write --list-different && tsc"
 	},
@@ -36,7 +36,7 @@
 		"@types/react": "catalog:react18",
 		"prettier": "catalog:",
 		"react": "catalog:react18",
-		"tailwindcss": "^3.4.10",
+		"tailwindcss": "^3.4.11",
 		"typescript": "catalog:"
 	},
 	"prettier": "@repo/prettier-config"
