--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -5,16 +5,16 @@
 	"type": "module",
 	"exports": {
 		".": {
-			"types": "./dist/index.d.ts",
-			"default": "./src/index.ts"
+			"types": "./src/index.ts",
+			"default": "./dist/index.js"
 		},
 		"./client": {
-			"types": "./dist/client.d.ts",
-			"default": "./src/client.ts"
+			"types": "./src/client.ts",
+			"default": "./dist/client.js"
 		},
 		"./schema": {
-			"types": "./dist/schema.d.ts",
-			"default": "./src/schema.ts"
+			"types": "./src/schema.ts",
+			"default": "./dist/schema.js"
 		}
 	},
 	"scripts": {
